localize the rest

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -5,6 +5,11 @@
   "pageHomeDisconnected": "Disconnected",
   "pageHomeConnecting": "Connecting...",
   "pageHomeUnknown": "Unknown :(",
+  "pageHomeBluetoothDisabled": "Bluetooth is disabled :/",
+  "pageHomeBluetoothDisabledEnable": "Enable",
+  "pageHomeBluetoothDisabledEnableOpenSettings": "Open bluetooth settings to enable",
+  "pageHomeNotPaired": "You don't have Freebuds 4i paired to your phone :/",
+  "pageHomeNotPairedPairOpenSettings": "Open bluetooth settings to pair",
   "settings": "Settings",
   "privacyPolicy": "Privacy policy",
   "privacyPolicyTitle": "Privacy policy (not really but is required)",
