--- a/lib/l10n/app_pl.arb
+++ b/lib/l10n/app_pl.arb
@@ -5,6 +5,11 @@
   "pageHomeDisconnected": "Rozłączone",
   "pageHomeConnecting": "Łączenie...",
   "pageHomeUnknown": "Nieznane :(",
+  "pageHomeBluetoothDisabled": "Bluetooth jest wyłączony :/",
+  "pageHomeBluetoothDisabledEnable": "Włącz",
+  "pageHomeBluetoothDisabledEnableOpenSettings": "Otwórz ustawienia żeby włączyć",
+  "pageHomeNotPaired": "Nie ma sparowanych Huawei Freebuds 4i :/",
+  "pageHomeNotPairedPairOpenSettings": "Otwórz ustawienia bluetooth żeby sparować",
   "settings": "Ustawienia",
   "privacyPolicy": "Polityka prywatności",
   "privacyPolicyTitle": "Polityka prywatności (tak naprawde to nie, ale jest wymagana)",
