--- a/lib/l10n/app_pl.arb
+++ b/lib/l10n/app_pl.arb
@@ -16,5 +16,6 @@
   "privacyPolicyText": "Ta aplikacja nie zbiera żadnych informacji o tobie. Ja (twórca, ;) nie zbieram żadnych emaili, identyfikatorów, lub czegokolwiek takiego na serwerze, bo nawet go nie mam :D a ta aplikacja nie ma dostępu do internetu :D\n\nFreeBuddy nie korzysta też z żadnych analityk typu Google Analytics, czy innego serwisu który zbierałby twoje dane <3\n\nJeśli masz jakieś pytania, napisz do mnie śmiało na 4i05wllh@anonaddy.me\n\nDzięki za przeczytanie i miłej zabawy przy korzystaniu :)",
   "privacyPolicyUrl": "https://the.lastgimbus.com/empty-privacy-policy/",
   "privacyPolicyUrlBtn": "Link do tej samej \"Polityki prywatności\"",
-  "openSourceLicensesBtn": "Licencje open source"
+  "pageAboutTitle": "O aplikacji",
+  "pageAboutOpenSourceLicensesBtn": "Licencje open source"
 }
