Shorten privacy policy

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -12,8 +12,8 @@
   "pageHomeNotPairedPairOpenSettings": "Open bluetooth settings to pair",
   "settings": "Settings",
   "privacyPolicy": "Privacy policy",
-  "privacyPolicyTitle": "Privacy policy (not really but is required)",
-  "privacyPolicyText": "This app does not collect any personal information about you. I (the author :) do not store emails, identifiers, or anything like that, on any server, because I don’t even have one :D and this app doesn't have internet access :D\n\nThe app also doesn’t use Google Analytics, or any other service that would collect your data <3\n\nIf you have any questions, you can contact me at: 4i05wllh@anonaddy.me\n\nThanks for reading, and enjoy using the app :)",
+  "privacyPolicyTitle": "\"Privacy policy\"",
+  "privacyPolicyText": "This app does not collect any personal information about you - no emails, identifiers, or anything like that, on any server, because I don’t even have one :D\n\nFreeBuddy also doesn’t use Google Analytics, or any other service that would collect your data <3",
   "privacyPolicyUrl": "https://the.lastgimbus.com/empty-privacy-policy/",
   "privacyPolicyUrlBtn": "Link to same \"privacy policy\"",
   "pageAboutTitle": "About app",
