--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -13,13 +13,13 @@
   "settings": "Settings",
   "privacyPolicy": "Privacy policy",
   "privacyPolicyTitle": "\"Privacy policy\"",
-  "privacyPolicyText": "This app does not collect any personal information about you - no emails, identifiers, or anything like that, on any server, because I don’t even have one :D\n\nFreeBuddy also doesn’t use Google Analytics, or any other service that would collect your data <3",
+  "privacyPolicyText": "This app does not collect any personal information about you - no emails, identifiers, or anything like that, on any server, because I don’t even have one :D\nFreeBuddy also doesn’t use Google Analytics, or any other service that would collect your data <3",
   "privacyPolicyUrl": "https://the.lastgimbus.com/empty-privacy-policy/",
   "pageAboutTitle": "About app",
   "pageAboutMeHeader": "About this app and me",
   "pageAboutMeBio": "Hi there 👋 I'm @TheLastGimbus, creator of this app 🧑‍💻 I hope you're enjoying it! I created it out of pure passion 💖",
   "pageAboutMeAnyQuestions": "If you have *ANY* questions, suggestions, or just want to chat, feel free to contact me on any of below:",
-  "pageAboutMeOpenSource": "FreeBuddy is 💯% open source - meaning you can read the source code it was made with - here, on it's GitHub: ",
+  "pageAboutMeOpenSource": "FreeBuddy is 💯% open source - meaning, you can read the source code it was made with: ",
   "pageAboutMeBlog": "I also made a blog about how it was created 🧑‍🎓 you can give it a read here: ",
   "pageAboutOpenSourceLicensesBtn": "Open source licenses"
 }
