--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -12,6 +12,9 @@
   "pageHomeNotPairedPairOpenSettings": "Open bluetooth settings to pair",
   "pageHomeConnectedClosed": "Headphones are connected, but not with FreeBuddy :/",
   "pageHomeConnectedClosedConnect": "Connect to headphones",
+  "autoPause": "Auto pause ⏸",
+  "sleepMode": "Sleep mode 😴",
+  "sleepModeOverlay": "Snoozing 😴🎶",
   "settings": "Settings",
   "privacyPolicy": "Privacy policy",
   "privacyPolicyTitle": "\"Privacy policy\"",
