--- a/lib/l10n/app_pl.arb
+++ b/lib/l10n/app_pl.arb
@@ -12,6 +12,9 @@
   "pageHomeNotPairedPairOpenSettings": "Otwórz ustawienia bluetooth żeby sparować",
   "pageHomeConnectedClosed": "Słuchawki są połączone, ale nie z FreeBuddy :/",
   "pageHomeConnectedClosedConnect": "Połącz ze słuchawkami",
+  "autoPause": "Auto pauza ⏸",
+  "sleepMode": "Tryb spanka 😴",
+  "sleepModeOverlay": "Spanko 😴🎶",
   "settings": "Ustawienia",
   "privacyPolicy": "Polityka prywatności",
   "privacyPolicyTitle": "\"Polityka prywatności\"",
