prettier connected-closed

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -10,7 +10,8 @@
   "pageHomeBluetoothDisabledEnableOpenSettings": "Open bluetooth settings to enable",
   "pageHomeNotPaired": "You don't have Freebuds 4i paired to your phone :/",
   "pageHomeNotPairedPairOpenSettings": "Open bluetooth settings to pair",
-  "pageHomeConnectedClosed": "Headphones are connected, but not with FreeBuddy :/",
+  "pageHomeConnectedClosed": "Headphones are connected, but not with FreeBuddy ",
+  "pageHomeConnectedClosedDesc": "You probably opened another app - connect again 👀",
   "pageHomeConnectedClosedConnect": "Connect to headphones",
   "autoPause": "Auto pause ⏸",
   "sleepMode": "Sleep mode 😴",
