--- a/lib/l10n/app_pl.arb
+++ b/lib/l10n/app_pl.arb
@@ -10,7 +10,8 @@
   "pageHomeBluetoothDisabledEnableOpenSettings": "Otwórz ustawienia żeby włączyć",
   "pageHomeNotPaired": "Nie ma sparowanych Huawei Freebuds 4i :/",
   "pageHomeNotPairedPairOpenSettings": "Otwórz ustawienia bluetooth żeby sparować",
-  "pageHomeConnectedClosed": "Słuchawki są połączone, ale nie z FreeBuddy :/",
+  "pageHomeConnectedClosed": "Słuchawki są połączone, ale nie z FreeBuddy",
+  "pageHomeConnectedClosedDesc": "Pewnie otworzyłeś inną apke - połącz spowrotem 👀",
   "pageHomeConnectedClosedConnect": "Połącz ze słuchawkami",
   "autoPause": "Auto pauza ⏸",
   "sleepMode": "Tryb spanka 😴",
