pretty disconnected info

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -2,7 +2,9 @@
   "appTitle": "FreeBuddy",
   "helloWorld": "Hello World!",
   "pageHomeConnected": "Connected",
-  "pageHomeDisconnected": "Disconnected",
+  "pageHomeDisconnected": "Headphones not connected 🙅",
+  "pageHomeDisconnectedDesc": "Your headphones are not connected to your phone 😨",
+  "pageHomeDisconnectedOpenSettings": "Open bluetooth settings to connect them 💙",
   "pageHomeConnecting": "Connecting...",
   "pageHomeUnknown": "Unknown :(",
   "pageHomeBluetoothDisabled": "Bluetooth is disabled :/",
