--- a/lib/l10n/app_pl.arb
+++ b/lib/l10n/app_pl.arb
@@ -2,7 +2,9 @@
   "appTitle": "FreeBuddy",
   "helloWorld": "Witaj świecie!",
   "pageHomeConnected": "Połączone",
-  "pageHomeDisconnected": "Rozłączone",
+  "pageHomeDisconnected": "Słuchawki nie połączone 🙅",
+  "pageHomeDisconnectedDesc": "Twoje słuchawki nie są połączone z telefonem 😨",
+  "pageHomeDisconnectedOpenSettings": "Otwórz ustawienia bluetooth żeby połączyć 💙",
   "pageHomeConnecting": "Łączenie...",
   "pageHomeUnknown": "Nieznane :(",
   "pageHomeBluetoothDisabled": "Bluetooth jest wyłączony :/",
