Prettify not paired info

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -10,8 +10,9 @@
   "pageHomeBluetoothDisabled": "Bluetooth is disabled :/",
   "pageHomeBluetoothDisabledEnable": "Enable",
   "pageHomeBluetoothDisabledEnableOpenSettings": "Open bluetooth settings to enable",
-  "pageHomeNotPaired": "You don't have Freebuds 4i paired to your phone :/",
-  "pageHomeNotPairedPairOpenSettings": "Open bluetooth settings to pair",
+  "pageHomeNotPaired": "You don't have Freebuds 4i paired to your phone 😿",
+  "pageHomeNotPairedPairOpenSettings": "Open bluetooth settings to pair 💙",
+  "pageHomeNotPairedPairOpenDemo": "Try app without headphones 🌐",
   "pageHomeConnectedClosed": "Headphones are connected, but not with FreeBuddy ",
   "pageHomeConnectedClosedDesc": "You probably opened another app - connect again 👀",
   "pageHomeConnectedClosedConnect": "Connect to headphones",
