--- a/lib/l10n/app_pl.arb
+++ b/lib/l10n/app_pl.arb
@@ -10,8 +10,9 @@
   "pageHomeBluetoothDisabled": "Bluetooth jest wyłączony :/",
   "pageHomeBluetoothDisabledEnable": "Włącz",
   "pageHomeBluetoothDisabledEnableOpenSettings": "Otwórz ustawienia żeby włączyć",
-  "pageHomeNotPaired": "Nie ma sparowanych Huawei Freebuds 4i :/",
-  "pageHomeNotPairedPairOpenSettings": "Otwórz ustawienia bluetooth żeby sparować",
+  "pageHomeNotPaired": "Nie masz sparowanych Freebuds 4i z telefonem 😿",
+  "pageHomeNotPairedPairOpenSettings": "Otwórz ustawienia bluetooth żeby sparować 💙",
+  "pageHomeNotPairedPairOpenDemo": "Wypróbuj apke bez słuchawek 🌐",
   "pageHomeConnectedClosed": "Słuchawki są połączone, ale nie z FreeBuddy",
   "pageHomeConnectedClosedDesc": "Pewnie otworzyłeś inną apke - połącz spowrotem 👀",
   "pageHomeConnectedClosedConnect": "Połącz ze słuchawkami",
