Prettify bt disabled

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -7,9 +7,9 @@
   "pageHomeDisconnectedOpenSettings": "Open bluetooth settings to connect them 💙",
   "pageHomeConnecting": "Connecting...",
   "pageHomeUnknown": "Unknown :(",
-  "pageHomeBluetoothDisabled": "Bluetooth is disabled :/",
-  "pageHomeBluetoothDisabledEnable": "Enable",
-  "pageHomeBluetoothDisabledEnableOpenSettings": "Open bluetooth settings to enable",
+  "pageHomeBluetoothDisabled": "Bluetooth is disabled 📶🚫",
+  "pageHomeBluetoothDisabledEnable": "Enable ☝",
+  "pageHomeBluetoothDisabledOpenSettings": "Open settings to enable 💙",
   "pageHomeNotPaired": "You don't have Freebuds 4i paired to your phone 😿",
   "pageHomeNotPairedPairOpenSettings": "Open bluetooth settings to pair 💙",
   "pageHomeNotPairedPairOpenDemo": "Try app without headphones 🌐",
