--- a/lib/l10n/app_pl.arb
+++ b/lib/l10n/app_pl.arb
@@ -7,9 +7,9 @@
   "pageHomeDisconnectedOpenSettings": "Otwórz ustawienia bluetooth żeby połączyć 💙",
   "pageHomeConnecting": "Łączenie...",
   "pageHomeUnknown": "Nieznane :(",
-  "pageHomeBluetoothDisabled": "Bluetooth jest wyłączony :/",
-  "pageHomeBluetoothDisabledEnable": "Włącz",
-  "pageHomeBluetoothDisabledEnableOpenSettings": "Otwórz ustawienia żeby włączyć",
+  "pageHomeBluetoothDisabled": "Bluetooth jest wyłączony 📶🚫",
+  "pageHomeBluetoothDisabledEnable": "Włącz ☝",
+  "pageHomeBluetoothDisabledOpenSettings": "Otwórz ustawienia żeby włączyć 💙",
   "pageHomeNotPaired": "Nie masz sparowanych Freebuds 4i z telefonem 😿",
   "pageHomeNotPairedPairOpenSettings": "Otwórz ustawienia bluetooth żeby sparować 💙",
   "pageHomeNotPairedPairOpenDemo": "Wypróbuj apke bez słuchawek 🌐",
