--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -13,7 +13,7 @@
   "pageHomeNotPaired": "You don't have Freebuds 4i paired to your phone 😿",
   "pageHomeNotPairedPairOpenSettings": "Open bluetooth settings to pair 💙",
   "pageHomeNotPairedPairOpenDemo": "Try app without headphones 🌐",
-  "pageHomeConnectedClosed": "Headphones are connected, but not with FreeBuddy ",
+  "pageHomeConnectedClosed": "Headphones are connected, but not with FreeBuddy 🤨",
   "pageHomeConnectedClosedDesc": "You probably opened another app - connect again 👀",
   "pageHomeConnectedClosedConnect": "Connect to headphones",
   "autoPause": "Auto pause ⏸",
