--- a/lib/l10n/app_pl.arb
+++ b/lib/l10n/app_pl.arb
@@ -13,7 +13,7 @@
   "pageHomeNotPaired": "Nie masz sparowanych Freebuds 4i z telefonem 😿",
   "pageHomeNotPairedPairOpenSettings": "Otwórz ustawienia bluetooth żeby sparować 💙",
   "pageHomeNotPairedPairOpenDemo": "Wypróbuj apke bez słuchawek 🌐",
-  "pageHomeConnectedClosed": "Słuchawki są połączone, ale nie z FreeBuddy",
+  "pageHomeConnectedClosed": "Słuchawki są połączone, ale nie z FreeBuddy 🤨",
   "pageHomeConnectedClosedDesc": "Pewnie otworzyłeś inną apke - połącz spowrotem 👀",
   "pageHomeConnectedClosedConnect": "Połącz ze słuchawkami",
   "autoPause": "Auto pauza ⏸",
