actaully make it work on >=12

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -7,6 +7,9 @@
   "pageHomeDisconnectedOpenSettings": "Open bluetooth settings to connect them 💙",
   "pageHomeConnecting": "Connecting...",
   "pageHomeUnknown": "Unknown :(",
+  "pageHomeNoPermission": "No permission to access bluetooth 😢",
+  "pageHomeNoPermissionGrant": "Grant permission 🔑",
+  "pageHomeNoPermissionOpenSettings": "Open settings to grant ⚙",
   "pageHomeBluetoothDisabled": "Bluetooth is disabled 📶🚫",
   "pageHomeBluetoothDisabledEnable": "Enable ☝",
   "pageHomeBluetoothDisabledOpenSettings": "Open settings to enable 💙",
