--- a/lib/l10n/app_pl.arb
+++ b/lib/l10n/app_pl.arb
@@ -7,6 +7,9 @@
   "pageHomeDisconnectedOpenSettings": "Otwórz ustawienia bluetooth żeby połączyć 💙",
   "pageHomeConnecting": "Łączenie...",
   "pageHomeUnknown": "Nieznane :(",
+  "pageHomeNoPermission": "Nie mam pozwolenia na blutut 😢",
+  "pageHomeNoPermissionGrant": "Pozwól na blutut 🔑",
+  "pageHomeNoPermissionOpenSettings": "Otwórz ustawienia żeby pozwolić ⚙",
   "pageHomeBluetoothDisabled": "Bluetooth jest wyłączony 📶🚫",
   "pageHomeBluetoothDisabledEnable": "Włącz ☝",
   "pageHomeBluetoothDisabledOpenSettings": "Otwórz ustawienia żeby włączyć 💙",
