implement structure of things with mocks
todo: actual headphones

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -23,6 +23,7 @@
   "sleepMode": "Sleep mode 😴",
   "sleepModeExplanation": "Sleep mode disables auto-pause and anc 🛏",
   "sleepModeOverlay": "Snoozing 😴🎶",
+  "gestureSettings": "Gesture settings ⚙",
   "settings": "Settings",
   "privacyPolicy": "Privacy policy",
   "privacyPolicyTitle": "\"Privacy policy\"",
