--- a/lib/l10n/app_pl.arb
+++ b/lib/l10n/app_pl.arb
@@ -21,6 +21,7 @@
   "pageHomeConnectedClosedConnect": "Połącz ze słuchawkami",
   "autoPause": "Auto pauza ⏸",
   "sleepMode": "Tryb spanka 😴",
+  "gestureSettings": "Ustawienia gestów ⚙",
   "sleepModeExplanation": "Tryb spanka wyłącza auto-pauze i anc 🛏",
   "sleepModeOverlay": "Spanko 😴🎶",
   "settings": "Ustawienia",
