--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -23,7 +23,27 @@
   "sleepMode": "Sleep mode 😴",
   "sleepModeExplanation": "Sleep mode disables auto-pause and anc 🛏",
   "sleepModeOverlay": "Snoozing 😴🎶",
-  "gestureSettings": "Gesture settings ⚙",
+
+  "pageGestureSettingsTitle": "Gesture settings 🔧",
+  "pageGestureSettingsDoubleTap": "Double tap",
+  "pageGestureSettingsDoubleTapDesc": "Tap a bud twice to:",
+  "pageGestureSettingsDoubleTapPlayPause": "Play/Pause",
+  "pageGestureSettingsDoubleTapNextSong": "Next song",
+  "pageGestureSettingsDoubleTapPrevSong": "Previous song",
+  "pageGestureSettingsDoubleTapAssist": "Voice assistant",
+  "pageGestureSettingsDoubleTapNone": "None",
+  "pageGestureSettingsLeftBud": "Left bud",
+  "pageGestureSettingsRightBud": "Right bud",
+  "pageGestureSettingsHold": "Touch and hold",
+  "pageGestureSettingsHoldDesc": "Holding a bud will toggle these ANC modes:",
+
+  "ancNoiseCancel": "Noise canceling 🔇",
+  "ancNoiseCancelDesc": "Reduces noise around you",
+  "ancOff": "Off 🤷",
+  "ancOffDesc": "Turns ANC off",
+  "ancAwareness": "Awareness 🔊",
+  "ancAwarenessDesc": "Allows you to hear your surroundings",
+
   "settings": "Settings",
   "privacyPolicy": "Privacy policy",
   "privacyPolicyTitle": "\"Privacy policy\"",
