--- a/lib/l10n/app_pl.arb
+++ b/lib/l10n/app_pl.arb
@@ -24,6 +24,27 @@
   "gestureSettings": "Ustawienia gestów ⚙",
   "sleepModeExplanation": "Tryb spanka wyłącza auto-pauze i anc 🛏",
   "sleepModeOverlay": "Spanko 😴🎶",
+
+  "pageGestureSettingsTitle": "Ustawienia gestów 🔧",
+  "pageGestureSettingsDoubleTap": "Dwukrotny tap",
+  "pageGestureSettingsDoubleTapDesc": "Tapnięcie dwa razy w słuchawkę spowoduje::",
+  "pageGestureSettingsDoubleTapPlayPause": "Start/pauza",
+  "pageGestureSettingsDoubleTapNextSong": "Następny utwór",
+  "pageGestureSettingsDoubleTapPrevSong": "Poprzedni utwór",
+  "pageGestureSettingsDoubleTapAssist": "Asystent głosowy",
+  "pageGestureSettingsDoubleTapNone": "Nic",
+  "pageGestureSettingsLeftBud": "Lewa słuchawka",
+  "pageGestureSettingsRightBud": "Prawa słuchawka",
+  "pageGestureSettingsHold": "Przytrzymanie",
+  "pageGestureSettingsHoldDesc": "Przytrzymanie słuchawki będzie przełączać te tryby ANC:",
+
+  "ancNoiseCancel": "Redukcja hałasu 🔇",
+  "ancNoiseCancelDesc": "Wygłusza hałas dookoła Ciebie",
+  "ancOff": "Wyłączona 🤷",
+  "ancOffDesc": "Wyłącza ANC",
+  "ancAwareness": "Przepuszczanie 🔊",
+  "ancAwarenessDesc": "Pozwala ci słyszeć twoje otoczenie",
+
   "settings": "Ustawienia",
   "privacyPolicy": "Polityka prywatności",
   "privacyPolicyTitle": "\"Polityka prywatności\"",
