Start settings refactor with name change

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -26,18 +26,18 @@
   "pageHomeConnectedClosedConnect": "Connect to headphones",
   "autoPause": "Auto pause ⏸",
 
-  "pageGestureSettingsTitle": "Gesture settings 🔧",
-  "pageGestureSettingsDoubleTap": "Double tap",
-  "pageGestureSettingsDoubleTapDesc": "Tap a bud twice to:",
-  "pageGestureSettingsDoubleTapPlayPause": "Play/Pause",
-  "pageGestureSettingsDoubleTapNextSong": "Next song",
-  "pageGestureSettingsDoubleTapPrevSong": "Previous song",
-  "pageGestureSettingsDoubleTapAssist": "Voice assistant",
-  "pageGestureSettingsDoubleTapNone": "None",
-  "pageGestureSettingsLeftBud": "Left bud",
-  "pageGestureSettingsRightBud": "Right bud",
-  "pageGestureSettingsHold": "Touch and hold",
-  "pageGestureSettingsHoldDesc": "Holding a bud will toggle these ANC modes:",
+  "pageHeadphonesSettingsTitle": "Headphones settings 🔧",
+  "pageHeadphonesSettingsDoubleTap": "Double tap",
+  "pageHeadphonesSettingsDoubleTapDesc": "Tap a bud twice to:",
+  "pageHeadphonesSettingsDoubleTapPlayPause": "Play/Pause",
+  "pageHeadphonesSettingsDoubleTapNextSong": "Next song",
+  "pageHeadphonesSettingsDoubleTapPrevSong": "Previous song",
+  "pageHeadphonesSettingsDoubleTapAssist": "Voice assistant",
+  "pageHeadphonesSettingsDoubleTapNone": "None",
+  "pageHeadphonesSettingsLeftBud": "Left bud",
+  "pageHeadphonesSettingsRightBud": "Right bud",
+  "pageHeadphonesSettingsHold": "Touch and hold",
+  "pageHeadphonesSettingsHoldDesc": "Holding a bud will toggle these ANC modes:",
 
   "ancNoiseCancel": "Noise canceling 🔇",
   "ancNoiseCancelDesc": "Reduces noise around you",
