--- a/lib/l10n/app_pl.arb
+++ b/lib/l10n/app_pl.arb
@@ -26,18 +26,18 @@
   "pageHomeConnectedClosedConnect": "Połącz ze słuchawkami",
   "autoPause": "Auto pauza ⏸",
 
-  "pageGestureSettingsTitle": "Ustawienia gestów 🔧",
-  "pageGestureSettingsDoubleTap": "Dwukrotny tap",
-  "pageGestureSettingsDoubleTapDesc": "Tapnięcie dwa razy w słuchawkę spowoduje::",
-  "pageGestureSettingsDoubleTapPlayPause": "Start/pauza",
-  "pageGestureSettingsDoubleTapNextSong": "Następny utwór",
-  "pageGestureSettingsDoubleTapPrevSong": "Poprzedni utwór",
-  "pageGestureSettingsDoubleTapAssist": "Asystent głosowy",
-  "pageGestureSettingsDoubleTapNone": "Nic",
-  "pageGestureSettingsLeftBud": "Lewa słuchawka",
-  "pageGestureSettingsRightBud": "Prawa słuchawka",
-  "pageGestureSettingsHold": "Przytrzymanie",
-  "pageGestureSettingsHoldDesc": "Przytrzymanie słuchawki będzie przełączać te tryby ANC:",
+  "pageHeadphonesSettingsTitle": "Ustawienia słuchawek 🔧",
+  "pageHeadphonesSettingsDoubleTap": "Dwukrotny tap",
+  "pageHeadphonesSettingsDoubleTapDesc": "Tapnięcie dwa razy w słuchawkę spowoduje::",
+  "pageHeadphonesSettingsDoubleTapPlayPause": "Start/pauza",
+  "pageHeadphonesSettingsDoubleTapNextSong": "Następny utwór",
+  "pageHeadphonesSettingsDoubleTapPrevSong": "Poprzedni utwór",
+  "pageHeadphonesSettingsDoubleTapAssist": "Asystent głosowy",
+  "pageHeadphonesSettingsDoubleTapNone": "Nic",
+  "pageHeadphonesSettingsLeftBud": "Lewa słuchawka",
+  "pageHeadphonesSettingsRightBud": "Prawa słuchawka",
+  "pageHeadphonesSettingsHold": "Przytrzymanie",
+  "pageHeadphonesSettingsHoldDesc": "Przytrzymanie słuchawki będzie przełączać te tryby ANC:",
 
   "ancNoiseCancel": "Redukcja hałasu 🔇",
   "ancNoiseCancelDesc": "Wygłusza hałas dookoła Ciebie",
