add auto pause setting
...which, kinda finalizes the whole re-design 🥳

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -25,6 +25,7 @@
   "pageHomeConnectedClosedDesc": "You probably opened another app - connect again 👀",
   "pageHomeConnectedClosedConnect": "Connect to headphones",
   "autoPause": "Auto pause ⏸",
+  "autoPauseDesc": "Music will automatically pause when you take off headphones",
 
   "pageHeadphonesSettingsTitle": "Headphones settings 🔧",
   "pageHeadphonesSettingsDoubleTap": "Double tap",
