fix some info widgets to be 💅stylish💅 again

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -19,7 +19,7 @@
   "pageHomeBluetoothDisabledEnable": "Enable ☝",
   "pageHomeBluetoothDisabledOpenSettings": "Open settings to enable 💙",
   "pageHomeNotPaired": "You don't have Freebuds 4i paired to your phone 😿",
-  "pageHomeNotPairedPairOpenSettings": "Open bluetooth settings to pair 💙",
+  "pageHomeNotPairedPairOpenSettings": "Open bluetooth settings to pair 🔌",
   "pageHomeNotPairedPairOpenDemo": "Try app without headphones 🌐",
   "pageHomeConnectedClosed": "Headphones are connected, but not with FreeBuddy 🤨",
   "pageHomeConnectedClosedDesc": "You probably opened another app - connect again 👀",
