--- a/lib/l10n/app_pl.arb
+++ b/lib/l10n/app_pl.arb
@@ -19,7 +19,7 @@
   "pageHomeBluetoothDisabledEnable": "Włącz ☝",
   "pageHomeBluetoothDisabledOpenSettings": "Otwórz ustawienia żeby włączyć 💙",
   "pageHomeNotPaired": "Nie masz sparowanych Freebuds 4i z telefonem 😿",
-  "pageHomeNotPairedPairOpenSettings": "Otwórz ustawienia bluetooth żeby sparować 💙",
+  "pageHomeNotPairedPairOpenSettings": "Otwórz ustawienia bluetooth żeby sparować 🔌",
   "pageHomeNotPairedPairOpenDemo": "Wypróbuj apke bez słuchawek 🌐",
   "pageHomeConnectedClosed": "Słuchawki są połączone, ale nie z FreeBuddy 🤨",
   "pageHomeConnectedClosedDesc": "Pewnie otworzyłeś inną apke - połącz spowrotem 👀",
