--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -18,7 +18,7 @@
   "pageHomeBluetoothDisabled": "Bluetooth is disabled 📶🚫",
   "pageHomeBluetoothDisabledEnable": "Enable ☝",
   "pageHomeBluetoothDisabledOpenSettings": "Open settings to enable 💙",
-  "pageHomeNotPaired": "You don't have Freebuds 4i paired to your phone 😿",
+  "pageHomeNotPaired": "You don't have Freebuds 4i or Freebuds Pro paired to your phone 😿",
   "pageHomeNotPairedPairOpenSettings": "Open bluetooth settings to pair 🔌",
   "pageHomeNotPairedPairOpenDemo": "Try app without headphones 🌐",
   "pageHomeConnectedClosed": "Headphones are connected, but not with FreeBuddy 🤨",
@@ -66,7 +66,7 @@
   "pageAboutOpenSourceLicensesBtn": "Open source licenses",
   "pageIntroTitle": "Welcome to FreeBuddy 👋",
   "pageIntroWhatIsThis": "FreeBuddy is open source app for your headphones 🎧",
-  "pageIntroSupported": "Currently supported are:\n - Huawei Freebuds 4i",
+  "pageIntroSupported": "Currently supported are:\n - Huawei Freebuds 4i \n - Huawei FreeBuds Pro",
   "pageIntroShortPrivacyPolicy": "This app doesn't collect any emails, identifiers, or any personal data 🎉 You can read more about it here: ",
   "pageIntroAnyQuestions": "If you have any questions, feel free to contact me 💌 Look at \"Settings->About\" for my socials!",
   "pageIntroQuit": "Okay 👍"
