Complete 3i support (finally), minor translation fixes.
// tlg rebase

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -40,7 +40,7 @@
   "pageHeadphonesSettingsHold": "Touch and hold",
   "pageHeadphonesSettingsHoldDesc": "Holding a bud will toggle these ANC modes:",
 
-  "ancNoiseCancel": "Noise canceling 🔇",
+  "ancNoiseCancel": "Noise cancellation 🔇",
   "ancNoiseCancelDesc": "Reduces noise around you",
   "ancOff": "Off 🤷",
   "ancOffDesc": "Turns ANC off",
