feat: Add ANC level selection

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -62,6 +62,10 @@
   "ancOffDesc": "Turns ANC off",
   "ancAwareness": "Awareness 🔊",
   "ancAwarenessDesc": "Allows you to hear your surroundings",
+  "ancCancelLevelNormal": "Normal",
+  "ancCancelLevelComfort": "Comfort",
+  "ancCancelLevelUltra": "Ultra",
+  "ancCancelLevelDynamic": "Dynamic",
 
   "settings": "Settings",
   "privacyPolicy": "Privacy policy",
