add dual connect

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -67,6 +67,19 @@
   "ancCancelLevelUltra": "Ultra",
   "ancCancelLevelDynamic": "Dynamic",
 
+  "dualConnect": "Dual connect",
+  "dualConnectConnect": "Connect",
+  "dualConnectDisconnect": "Disconnect",
+  "dualConnectUnpair": "Unpair",
+  "dualConnectUnpairDesc": "This device will be unpaired and cannot be connected until paired again. Continue?",
+  "dualConnectModePlaying": "Playing",
+  "dualConnectModeConnected": "Connected",
+  "dualConnectModeOffline": "Offline",
+  "dualConnectDeviceName": "Device name",
+  "dualConnectDeviceMac": "MAC address",
+  "dualConnectAutoConnect": "Auto connect",
+  "dualConnectPreferred": "Preferred device",
+
   "settings": "Settings",
   "privacyPolicy": "Privacy policy",
   "privacyPolicyTitle": "\"Privacy policy\"",
@@ -89,5 +102,6 @@
   "pageIntroSupported": "Currently supported are:\n - Huawei FreeBuds 4i\n - Huawei FreeBuds 3i",
   "pageIntroShortPrivacyPolicy": "This app doesn't collect any emails, identifiers, or any personal data 🎉 You can read more about it here: ",
   "pageIntroAnyQuestions": "If you have any questions, feel free to contact me 💌 Look at \"Settings->About\" for my socials!",
-  "pageIntroQuit": "Okay 👍"
+  "pageIntroQuit": "Okay 👍",
+  "cancel": "Cancel"
 }
